--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "jquery": "^3.6.0",
+    "json-utils": "^0.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.14"
   }
